--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lê Minh Ánh</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nguyễn Tuyết</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div id="drag-container">
-        <div id="spin-container">
-          <!-- Add your images (or video) here -->
-          <img src="./img/anh1.JPG" alt="">
-          <img src="./img/anh2.jpeg" alt="">
-          <img src="./img/anh3.jpg" alt="">
-          <img src="./img//anh4.jpg" alt="">
-          <img src="./img/anh5.JPG" alt="">
-          <img src="./img/anh9.JPG" alt="">
-          
-          <!-- Text at center of ground -->
-          <p>HappyBirthDay</p>
-        </div>
-        <div id="ground"></div>
-      </div>
-      
-      <div id="music-container"><a href="https://anh15092002.github.io/daygitcode/"><img style="height: 30px; width: 30px;" src="./img/icon2.jpg" alt=""></a></div>
+  <div id="drag-container">
+    <div id="spin-container">
+      <!-- Add your images (or video) here -->
+      <img src="./img/anh1.JPG" alt="">
+      <img src="./img/anh2.jpg" alt="">
+      <img src="./img/anh3.jpg" alt="">
+      <img src="./img//anh6.jpg" alt="">
+      <img src="./img/anh5.JPG" alt="">
+      <img src="./img/anh4.jpg" alt="">
+
+      <!-- Text at center of ground -->
+      <p>Những cảm xúc này, chẳng biết từ bao giờ đã nảy nở trong lòng tớ. Tớ không thể giấu diếm nó nữa, và đó cũng
+        chẳng phải là một điều tồi tệ. Nhưng mỗi lần cố gắng biểu đạt, lại nhận được sự né tránh, tớ cảm thấy như mình
+        đang bị mắc kẹt trong một vòng lặp không lối thoát. Tớ biết rằng mỗi người đều có quyền lựa chọn và cậu cũng
+        không phải ngoại lệ. Nhưng đôi khi, việc tiếp tục theo đuổi một điều gì đó mà không nhận được sự đáp lại chỉ làm
+        tổn thương hơn cho cả hai. Vậy nên, đây là những lời tớ muốn nói để có thể thật sự không phải suy nghĩ gì nữa.
+        Tớ không muốn tạo sự không thoải mái nào cho cậu vì tớ rất muốn sau việc này thì chúng ta vẫn sẽ như trước. Tớ
+        cũng không dám nói ra nguyện vọng của tớ trong này nhưng có lẽ cậu cũng sẽ biết chính xác nó là điều gì. Vậy nên
+        tớ chỉ mong là cậu nhận món quà này trước khi tớ thật sự cất nó đi. Tớ cũng vẫn đang chuẩn bị một món quà khác
+        nhưng đợt này tớ đang bận quá nên chưa có kịp nên là sẽ gửi đến cậu vào một ngày gần nhất hehe.</p>
+    </div>
+    <div id="ground"></div>
+  </div>
+
+  <div id="music-container"><a href=""><img style="height: 30px; width: 30px;" src="./" alt=""></a></div>
 </body>
 <script src="style.js"></script>
+
 </html>
